# bitcash-contract-dho

./: .env.example  .gitignore  CMakeLists.txt  README.md  buynetcpu_jungle.sh  buyrambytes.sh  buyrambytes_jungle.sh  cli.sh  package-lock.json  package.json  start.sh  test.txt  updatepermissions.sh
.devcontainer/: Dockerfile  devcontainer.json
bitcash.dho/: CMakeLists.txt  bitcash.dho.cpp  bitcash.dho.hpp  bitcash.dho.utils.cpp  constants.hpp
bitcash.dho/proposal/: factory.cpp  factory.hpp  proposal.hpp  proposal_main.hpp
bitcash.dho/tables/: config.hpp  proposal.hpp
commands/: buyrambytes.sh  deploy.sh  powerup.sh
docs/: proposal.md  referendums.md
include/: proposals.hpp  referendums.hpp  token.hpp  util.hpp
include/common/: constants.hpp  constants.pre.prod.hpp  data_types.hpp
include/phases/: base_phase.hpp  dialog_phase.hpp  draft_phase.hpp  phases_factory.hpp  voting_phase.hpp
include/proposals/: amendment_proposal.hpp  base_proposal.hpp  change_time_proposal.hpp  extend_debate_proposal.hpp  main_proposal.hpp  proposals_factory.hpp  shorten_debate_proposal.hpp
scripts/: commands.js  compile.js  config.js  contract-settings.js  eos.js  eosio-errors.js  eosio-util.js  permissions.js
src/: proposals.cpp  referendums.cpp  token.cpp
test/: proposals.amendment.test.js  proposals.extend.debate.test.js  proposals.shorten.debate.test.js  proposals.test.js  referendums.test.js
tests/: CMakeLists.txt
usefull-scripts/: buynetcpu.sh  buyrameos.sh  create-proposal.sh  deploy.sh  main.js  main.sh  move.sh  nodeos.sh  poweup.sh  reset.sh  wipetable.sh
(+33 files in other folders)
